--- a/english/static/css/cover.css
+++ b/english/static/css/cover.css
@@ -106,7 +106,15 @@ body {
 /*
  * Cover
  */
-
+.block1 {
+  margin-left: -40%;
+  margin-top: 15%;
+}
+.block2 {
+  position: absolute;
+  top: 0px;
+  left: 1000px;
+}
 .cover {
   padding: 0 20px;
 }
@@ -158,4 +166,25 @@ body {
   .cover-container {
     width: 700px;
   }
+}
+button {
+  background-color: #4286f4;
+  margin-bottom: 10px;
+  border: 3px solid #767385;
+  width: 180px;
+  height: 80px;
+  font-size: 20px;
+  border-radius: 0 15px;
+}
+
+#russian {
+  position: absolute;
+  top: 200px;
+  left: 500px;
+}
+
+#english {
+  position: absolute;
+  top: 200px;
+  left: 800px;
 }
