--- a/english/templates/index.html
+++ b/english/templates/index.html
@@ -1,52 +1,9 @@
+{% extends '/home/firdavs-senior/teach/my_projects/english/templates/base.html' %}
 {% load staticfiles %}
-<!DOCTYPE html>
-<html>
-<head>
-  <link rel="shortcut icon" href="{% static 'fonts/for.ico' %} ">
-  <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-  <link rel="stylesheet" href="{% static 'css/cover.css' %}">
-  <link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}">
-  <script src="{% static 'js/jquery-3.1.1.min.js' %}" type="text/javascript"></script>
-  <script src="{% static 'js/bootstrap.min.js' %}" type="text/javascript"></script>
-  <meta charset="utf-8">
-  <title>yep</title>
-</head>
-<body>
-    <div class="site-wrapper">
-
-      <div class="site-wrapper-inner">
-
-        <div class="cover-container">
-
-          <div class="masthead clearfix">
-            <div class="inner">
-              <h1 align="left">Welcome to my web app</h1>
-              <ul class="nav masthead-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">Features</a></li>
-                <li><a href="#">Contact</a></li>
-              </ul>
-            </div>
-          </div>
-
-          <div class="inner cover">
-            <h1 class="cover-heading">Cover your page.</h1>
-            <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
-            <p class="lead">
-              <a href="#" class="btn btn-lg btn-default">Learn more</a>
-            </p>
-          </div>
-
-          <div class="mastfoot">
-            <div class="inner">
-              <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-
-    </div>
-</body>
-</html>
+{% block t_block %}
+ <title>Projects</title>
+ {% endblock t_block %}
+ {% block content %}
+ <h1>Welcome to my web app</h1>
+ <div class="block1"><a href="english"><img src="{% static 'fonts/english.png' %}" alt="English" class="img-circle"></a></div>
+ {% endblock content %}
