--- a/english/templates/english.html
+++ b/english/templates/english.html
@@ -15,5 +15,5 @@
 		<button id="e1" n={{word.id}}>{{word.into_english}}</button><br>
 		{% endfor %}
 	</div>
- <script type="text/javascript" src="{% static 'js/myjs.js' %}"></script>
+ <script type="text/javascript" src="{% static 'js/english.js' %}"></script>
  {% endblock content %}
