--- a/english/templates/index.html
+++ b/english/templates/index.html
@@ -2,8 +2,13 @@
 {% load staticfiles %}
 {% block t_block %}
  <title>Projects</title>
- {% endblock t_block %}
- {% block content %}
- <h1>Welcome to my web app</h1>
- <div class="block1"><a href="english"><img src="{% static 'fonts/english.png' %}" alt="English" class="img-circle"></a></div>
- {% endblock content %}
+{% endblock t_block %}
+{% block content %}
+ 	<div id="title"><h1><font color="#A9C1C9">Welcome to my web app</font></h1></div>
+	<div id="pic1">
+ 	   <a href="english"><img src="{% static 'fonts/english.png' %}" alt="English" class="img-circle" height="200" width="300"></a>
+ 	</div>
+	<div id="pic2">
+ 	   <a href="ping"><img src="{% static 'fonts/ping.jpg' %}" alt="English" class="img-circle" height="200" width="300"></a>
+	</div>
+{% endblock content %}
