--- a/english/templates/base.html
+++ b/english/templates/base.html
@@ -8,19 +8,13 @@
   <link rel="stylesheet" href="{% static 'css/cover.css' %}">
   <link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}">
   <script src="{% static 'js/jquery-3.1.1.min.js' %}" type="text/javascript"></script>
-  <script src="{% static 'js/bootstrap.min.js' %}" type="text/javascript"></script>
+  <script src="{% static 'js/a.js' %}" type="text/javascript"></script>
   <meta charset="utf-8">
   {% block t_block %}
   {% endblock %}
 </head>
 <body>
-  <div class="block2"><ul class="nav masthead-nav">
-    <li class="active"><a href="#">Home</a></li>
-    <li><a href="#">Features</a></li>
-    <li><a href="#">Contact</a></li>
-  </ul>
-  </div>
   {% block content %}
-  {% endblock %}            
+  {% endblock %}
 </body>
 </html>
