--- a/english/templates/base.html
+++ b/english/templates/base.html
@@ -1,20 +1,30 @@
 {% load staticfiles %}
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <link rel="shortcut icon" href="{% static 'fonts/for.ico' %} ">
-  <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-  <link rel="stylesheet" href="{% static 'css/cover.css' %}">
-  <link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}">
-  <script src="{% static 'js/jquery-3.1.1.min.js' %}" type="text/javascript"></script>
-  <script src="{% static 'js/a.js' %}" type="text/javascript"></script>
-  <meta charset="utf-8">
-  {% block t_block %}
-  {% endblock %}
-</head>
-<body>
-  {% block content %}
-  {% endblock %}
-</body>
+	<head>
+		<meta charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="{% static 'css/c.css' %}">
+		<link rel="stylesheet" type="text/css" href="{% static 'css/cover.css' %}">
+		<script src="{% static 'js/jquery-3.1.1.min.js' %}" type="text/javascript"></script>
+		{% block t_block %}
+  		{% endblock %}
+	</head>
+	<body>
+		<header class="site-header">
+			<div class="logo">
+				<img src="{% static 'fonts/logo.jpg' %}" alt="logo">
+			</div>
+			
+			<h1>Several unrelated small apps</h1>
+			
+			<nav class="menu">
+				<ul>
+					<li><a href="http://localhost:8000/projects/">Home</a></li>
+					<li><a href="#">About app</a></li>
+				</ul>
+			</nav>
+		</header>
+		{% block content %}
+  		{% endblock %}
+	</body>
 </html>
