--- a/english/templates/ping.html
+++ b/english/templates/ping.html
@@ -1,4 +1,4 @@
-{% extends '/home/firdavs-senior/teach/my_projects/english/templates/base.html' %}
+{% extends './base.html' %}
 {% load staticfiles %}
 {% block t_block %}
 	<title>Ping Pong</title>
@@ -13,5 +13,12 @@
 	<div id="ball">
 		<a href=""><img src="{% static 'fonts/ball.png' %}" alt="ball" class="img-circle" height="20" width="20"></a>
 	</div>
+	<div id="lscore">
+		<font size="5" color="#000000">Your score: </font>
+		<font id="ls" size="5" color="#000000">5</font>
+	</div>
+	<div id="rscore">
+		<font size="5" color="#ffffff">Your score: </font>
+		<font id="rs" size="5" color="#ffffff">5</font>
 <script type="text/javascript" src="{% static 'js/ping.js' %}"></script>
 {% endblock content %}
