--- a/english/templates/base.html
+++ b/english/templates/base.html
@@ -12,7 +12,7 @@
 	<body>
 		<header class="site-header">
 			<div class="logo">
-				<img src="{% static 'fonts/logo.jpg' %}" alt="logo">
+				<a href="http://localhost:8000/projects/"><img src="{% static 'fonts/logo.png' %}" alt="logo"></a>
 			</div>
 			
 			<h1>Several unrelated small apps</h1>
