--- a/english/templates/base.html
+++ b/english/templates/base.html
@@ -3,8 +3,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="{% static 'css/c.css' %}">
-		<link rel="stylesheet" type="text/css" href="{% static 'css/cover.css' %}">
+		<link rel="stylesheet" type="text/css" href="{% static 'css/common.css' %}">
 		<script src="{% static 'js/jquery-3.1.1.min.js' %}" type="text/javascript"></script>
 		{% block t_block %}
   		{% endblock %}
