--- a/english/templates/english.html
+++ b/english/templates/english.html
@@ -1,19 +1,20 @@
 {% extends './base.html' %}
 {% load staticfiles %}
 {% block t_block %}
- <title>English</title>
- {% endblock t_block %}
- {% block content %}
- 	{{test}}
- 	<div id="russian">
- 		{% for word in russian_words %}
-		<button n={{word.id}}>{{word.into_russian}}</button><br>
-		{% endfor %}
-	</div>
-	<div id="english">
-		{% for word in english_words %}
-		<button n={{word.id}}>{{word.into_english}}</button><br>
-		{% endfor %}
-	</div>
- <script type="text/javascript" src="{% static 'js/english.js' %}"></script>
- {% endblock content %}
+	<link rel="stylesheet" type="text/css" href="{% static 'css/english.css' %}">
+	<title>English</title>
+{% endblock t_block %}
+{% block content %}
+	{{test}}
+	<div id="russian">
+		{% for word in russian_words %}
+	<button n={{word.id}}>{{word.into_russian}}</button><br>
+	{% endfor %}
+</div>
+<div id="english">
+	{% for word in english_words %}
+	<button n={{word.id}}>{{word.into_english}}</button><br>
+	{% endfor %}
+</div>
+<script type="text/javascript" src="{% static 'js/english.js' %}"></script>
+{% endblock content %}
