--- a/static/css/c.css
+++ b/static/css/c.css
@@ -34,7 +34,7 @@ body {
 		float: left;
 	}
 	.site-header img {
-		
+		transition: transform .8s;
 		margin-left: 40px;
 		margin-top: 20px;
 		border-radius: 50%;
@@ -42,7 +42,9 @@ body {
 		height: 160px;
 		/*margin-right: 250px;*/
 	}
-
+	.site-header img:hover {
+		transform: rotateY(180deg);
+	}
 	.menu {
 		float: right;
 		margin-top: 30px;
@@ -82,6 +84,7 @@ body {
 }
 	.site-main .english {
 		margin-left: 70px;
+		float: left;
 		/*margin-top: 40px; */
 	}
 	.site-main img {
