--- a/static/css/cover.css
+++ b/static/css/cover.css
@@ -1,11 +1,14 @@
 button {
-  background-color: #4286f4;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  background-color: #032042;
   margin-bottom: 10px;
-  border: 3px solid #767385;
-  width: 180px;
+  border: 3px solid #74ca12;
+  width: 200px;
   height: 80px;
   font-size: 20px;
   border-radius: 0 15px;
+  color: #74ca12;
 }
 
 #lscore {
