--- a/english/static/css/common.css
+++ b/english/static/css/common.css
@@ -1,5 +1,5 @@
 body, html {
-	height: 100%;
+	/*height: 100%;*/
 	margin: 0;
 }
 
@@ -13,7 +13,8 @@ body {
 
 .site-header {
 	/*background-color: #6d6d6d;*/
-	height: 25%;
+	/*height: 25%;*/
+	height: 170px;
 	/*border: 0.1px solid black;
 	border-radius: 5px;*/
 	
@@ -79,7 +80,7 @@ body {
 .site-main {
 	margin-top: 100px;
 	/*background-color: #a3a1a1;*/
-	height: 60%;
+	/*height: 60%;*/
 	margin-bottom: 0px;
 	/*border: 0.1px solid black;
 	border-radius: 5px;*/
