--- a/english/templates/index.html
+++ b/english/templates/index.html
@@ -4,7 +4,19 @@
 	<title>Projects</title>
 {% endblock t_block %}
 {% block content %}
-	<main class="site-main">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 secondrow">
+				<a href="english"><img class="firstblock" src="{% static 'fonts/english.jpg' %}"></a>
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 secondrow">
+				<a href="fifteen"><img class="firstblock" src="{% static 'fonts/fifteen.jpg' %}"></a>
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 secondrow">
+			</div>
+		</div>
+	</div>
+	<!--<main class="site-main">
 		<div class="firstblock">
 			<div class="english com">
 				<a href="english"><img class="com" src="{% static 'fonts/english.jpg' %}"></a>
@@ -13,5 +25,5 @@
 				<a href="fifteen"><img class="com" src="{% static 'fonts/fifteen.jpg' %}"></a>
 			</div>
 		</div>
-	</main>
+	</main>-->
 {% endblock content %}
