--- a/english/static/css/common.css
+++ b/english/static/css/common.css
@@ -1,6 +1,15 @@
+.firstrow {
+	height: 200px;
+}
+
+.secondrow {
+	height: 300px;
+}
+
 body, html {
 	/*height: 100%;*/
 	margin: 0;
+	padding: 0;
 }
 
 body {
@@ -8,17 +17,69 @@ body {
 	background-repeat: no-repeat;
 	background-size: 100%;
 	/*background-color: #6d6d6d;*/
-
 }
 
-.site-header {
+.first img {
+	height: 150px;
+	width: 70%;
+	margin-left: 20px;
+	margin-top: 20px;
+	transition: transform .8s;
+}
+
+.first img:hover {
+	transform: rotateY(180deg);
+}
+
+.second {
+	padding-top: 10px;
+	text-align: center;
+	color: #74ca12;
+	font-family: Webdings;
+}
+
+.third {
+	padding-top: 5%;
+	padding-left: 5%;
+}
+
+.menu ul li {
+		list-style: none;
+		display: inline;
+		margin-right: 20px;
+	}
+
+	.menu ul li:first-child {
+		border-right: 2px solid black;
+		padding-right: 25px;
+	}
+
+	.menu ul li > a {
+		color: #74ca12;
+		text-decoration: none;
+		cursor: pointer;
+		font-size: 25px;
+	}
+	
+	.menu ul li a:hover {
+		color: black;
+	}
+
+.firstblock {
+		height: 80%;
+		width: 70%;
+		margin-left: 10%;
+		margin-top: 5%;
+		border-radius: 15px;
+}
+/*.site-header {
 	/*background-color: #6d6d6d;*/
 	/*height: 25%;*/
-	height: 170px;
+	/*height: 170px;
 	/*border: 0.1px solid black;
 	border-radius: 5px;*/
 	
-}
+/*}
 	.site-header h1 {
 		float: left;
 		font-family: Webdings;
@@ -43,8 +104,8 @@ body {
 		width: 180px;
 		height: 160px;
 		/*margin-right: 250px;*/
-	}
-	.site-header img:hover {
+	/*}
+	/*.site-header img:hover {
 		transform: rotateY(180deg);
 	}
 	.menu {
@@ -52,7 +113,7 @@ body {
 		margin-top: 30px;
 		/*border: 1px solid black;
 		border-radius: 30px;*/
-		margin-right: 20px;
+	/*	margin-right: 20px;
 	}
 
 	.menu ul li {
@@ -81,16 +142,16 @@ body {
 	margin-top: 100px;
 	/*background-color: #a3a1a1;*/
 	/*height: 60%;*/
-	margin-bottom: 0px;
+	/*margin-bottom: 0px;
 	/*border: 0.1px solid black;
 	border-radius: 5px;*/
-}
+/*}
 	.firstblock {
 		margin-left: 130px;
 		height: 200px;
 		width: 950px;
 	}
-	.com {
+	.firstblock {
 		height: 200px;
 		width: 300px;
 	}
@@ -99,14 +160,15 @@ body {
 		margin-right: 30px;
 		float: left;
 		/*margin-top: 40px; */
-	}
+	/*}
 	img {
 		/*height: 200px;
 		width: 300px;*/
-		cursor: pointer;
+		/*cursor: pointer;
 		border-radius: 10px;
 	}
 	.fifteen {
 		float: left;
 	}
 
+*/
