--- a/english/templates/base.html
+++ b/english/templates/base.html
@@ -3,13 +3,35 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+		<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap-theme.min.css' %}">
 		<link rel="stylesheet" type="text/css" href="{% static 'css/common.css' %}">
-		<script src="{% static 'js/jquery-3.1.1.min.js' %}" type="text/javascript"></script>
 		{% block t_block %}
   		{% endblock %}
 	</head>
 	<body>
-		<header class="site-header">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 first firstrow">
+					<a href="http://localhost:8000/projects/"><img src="{% static 'fonts/logo.png' %}" alt="logo"></a>
+				</div>
+
+				<div class="col-lg-5 col-md-5 col-sm-5 col-xs-5 second firstrow">
+					<h1><b>Several unrelated small apps</b></h1>
+				</div>
+
+				<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 third firstrow">
+					<nav class="menu">
+						<ul>
+							<li><a href="http://localhost:8000/projects/">Home</a></li>
+							<li><a href="#">About app</a></li>
+						</ul>
+					</nav>
+				</div>
+			</div>
+		</div>
+		<!--<header class="site-header">
 			<div class="logo">
 				<a href="http://localhost:8000/projects/"><img src="{% static 'fonts/logo.png' %}" alt="logo"></a>
 			</div>
@@ -22,8 +44,11 @@
 					<li><a href="#">About app</a></li>
 				</ul>
 			</nav>
-		</header>
+		</header>-->
+		<script src="{% static 'js/jquery-3.1.1.min.js' %}" type="text/javascript"></script>
+  		<script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
 		{% block content %}
   		{% endblock %}
+  		
 	</body>
 </html>
