--- a/english/templates/index.html
+++ b/english/templates/index.html
@@ -5,25 +5,16 @@
 {% endblock t_block %}
 {% block content %}
 	<div class="container">
-		<div class="row">
+		<div class="row up">
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 secondrow">
-				<a href="english"><img class="firstblock" src="{% static 'fonts/english.jpg' %}"></a>
+				<a href="english" class="upp"><img class="firstblock" src="{% static 'fonts/english.jpg' %}"></a>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 secondrow">
-				<a href="fifteen"><img class="firstblock" src="{% static 'fonts/fifteen.jpg' %}"></a>
+				<a href="fifteen" class="upp"><img class="firstblock" src="{% static 'fonts/fifteen.jpg' %}"></a>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 secondrow">
+				<a href="news" class="upp"><img class="firstblock" src="{% static 'fonts/news.jpg' %}"></a>
 			</div>
 		</div>
 	</div>
-	<!--<main class="site-main">
-		<div class="firstblock">
-			<div class="english com">
-				<a href="english"><img class="com" src="{% static 'fonts/english.jpg' %}"></a>
-			</div>
-			<div class="fifteen com">
-				<a href="fifteen"><img class="com" src="{% static 'fonts/fifteen.jpg' %}"></a>
-			</div>
-		</div>
-	</main>-->
 {% endblock content %}
