--- a/english/static/css/common.css
+++ b/english/static/css/common.css
@@ -6,12 +6,13 @@
 	height: 300px;
 }
 
+
+
 body, html {
-	/*height: 100%;*/
+	height: 100%;
 	margin: 0;
 	padding: 0;
 }
-
 body {
 	background-image: url("../fonts/fon.jpg");
 	background-repeat: no-repeat;
@@ -72,103 +73,3 @@ body {
 		margin-top: 5%;
 		border-radius: 15px;
 }
-/*.site-header {
-	/*background-color: #6d6d6d;*/
-	/*height: 25%;*/
-	/*height: 170px;
-	/*border: 0.1px solid black;
-	border-radius: 5px;*/
-	
-/*}
-	.site-header h1 {
-		float: left;
-		font-family: Webdings;
-		margin-top: 30px;
-		width: 30%;
-		min-height: 30%;
-		text-align: center;
-		color: #74ca12;
-		margin-left: 250px;
-		padding: 10px;
-
-	}
-
-	.logo {
-		float: left;
-	}
-	.site-header img {
-		transition: transform .8s;
-		margin-left: 40px;
-		margin-top: 20px;
-		border-radius: 50%;
-		width: 180px;
-		height: 160px;
-		/*margin-right: 250px;*/
-	/*}
-	/*.site-header img:hover {
-		transform: rotateY(180deg);
-	}
-	.menu {
-		float: right;
-		margin-top: 30px;
-		/*border: 1px solid black;
-		border-radius: 30px;*/
-	/*	margin-right: 20px;
-	}
-
-	.menu ul li {
-		list-style: none;
-		display: inline;
-		margin-right: 20px;
-	}
-
-	.menu ul li:first-child {
-		border-right: 2px solid black;
-		padding-right: 25px;
-	}
-
-	.menu ul li > a {
-		color: #74ca12;
-		text-decoration: none;
-		cursor: pointer;
-		font-size: 25px;
-	}
-	
-	.menu ul li a:hover {
-		color: black;
-	}
-
-.site-main {
-	margin-top: 100px;
-	/*background-color: #a3a1a1;*/
-	/*height: 60%;*/
-	/*margin-bottom: 0px;
-	/*border: 0.1px solid black;
-	border-radius: 5px;*/
-/*}
-	.firstblock {
-		margin-left: 130px;
-		height: 200px;
-		width: 950px;
-	}
-	.firstblock {
-		height: 200px;
-		width: 300px;
-	}
-	.english {
-		margin-left: 70px;
-		margin-right: 30px;
-		float: left;
-		/*margin-top: 40px; */
-	/*}
-	img {
-		/*height: 200px;
-		width: 300px;*/
-		/*cursor: pointer;
-		border-radius: 10px;
-	}
-	.fifteen {
-		float: left;
-	}
-
-*/
