--- a/english/templates/base.html
+++ b/english/templates/base.html
@@ -7,6 +7,8 @@
 		<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
 		<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap-theme.min.css' %}">
 		<link rel="stylesheet" type="text/css" href="{% static 'css/common.css' %}">
+		<script src="{% static 'js/jquery-3.1.1.min.js' %}" type="text/javascript"></script>
+  		<script src="{% static 'js/bootstrap.min.js' %}" type="text/javascript"></script>
 		{% block t_block %}
   		{% endblock %}
 	</head>
@@ -14,7 +16,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 first firstrow">
-					<a href="http://localhost:8000/projects/"><img src="{% static 'fonts/logo.png' %}" alt="logo"></a>
+					<a href="{% url 'index' %}"><img src="{% static 'fonts/logo.png' %}" alt="logo"></a>
 				</div>
 
 				<div class="col-lg-5 col-md-5 col-sm-5 col-xs-5 second firstrow">
@@ -24,31 +26,14 @@
 				<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 third firstrow">
 					<nav class="menu">
 						<ul>
-							<li><a href="http://localhost:8000/projects/">Home</a></li>
+							<li><a href="{% url 'index' %}">Home</a></li>
 							<li><a href="#">About app</a></li>
 						</ul>
 					</nav>
 				</div>
 			</div>
 		</div>
-		<!--<header class="site-header">
-			<div class="logo">
-				<a href="http://localhost:8000/projects/"><img src="{% static 'fonts/logo.png' %}" alt="logo"></a>
-			</div>
-			
-			<h1>Several unrelated small apps</h1>
-			
-			<nav class="menu">
-				<ul>
-					<li><a href="http://localhost:8000/projects/">Home</a></li>
-					<li><a href="#">About app</a></li>
-				</ul>
-			</nav>
-		</header>-->
-		<script src="{% static 'js/jquery-3.1.1.min.js' %}" type="text/javascript"></script>
-  		<script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
 		{% block content %}
   		{% endblock %}
-  		
 	</body>
 </html>
