--- a/english/templates/english/index.html
+++ b/english/templates/english/index.html
@@ -4,16 +4,16 @@
 	<title>Projects</title>
 {% endblock t_block %}
 {% block content %}
-	<div class="container">
+	<div class="container another">
 		<div class="row up">
-			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 secondrow">
+			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-6 secondrow">
 				<a href="{% url 'english:english' %}" class="upp"><img class="firstblock" src="{% static 'english/fonts/english.jpg' %}"></a>
 			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 secondrow">
+			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-6 secondrow">
 				<a href="{% url 'english:fifteen' %}" class="upp"><img class="firstblock" src="{% static 'english/fonts/fifteen.jpg' %}"></a>
 			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 secondrow">
-				<a href="{% url 'english:news' %}" class="upp"><img class="firstblock" src="{% static 'english/fonts/news.jpg' %}"></a>
+			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-6 secondrow">
+				
 			</div>
 		</div>
 	</div>
