--- a/english/templates/english/base.html
+++ b/english/templates/english/base.html
@@ -3,10 +3,11 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="{% static 'english/css/bootstrap.min.css' %}">
 		<link rel="stylesheet" type="text/css" href="{% static 'english/css/bootstrap-theme.min.css' %}">
 		<link rel="stylesheet" type="text/css" href="{% static 'english/css/common.css' %}">
+		<link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
 		<script src="{% static 'english/js/jquery-3.1.1.min.js' %}" type="text/javascript"></script>
   		<script src="{% static 'english/js/bootstrap.min.js' %}" type="text/javascript"></script>
 		{% block t_block %}
@@ -20,7 +21,7 @@
 				</div>
 
 				<div class="col-lg-5 col-md-5 col-sm-5 col-xs-5 second firstrow">
-					<h1><b>Several unrelated small apps</b></h1>
+					<span class="title">Several unrelated small apps</span>
 				</div>
 
 				<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 third firstrow">
