--- a/english/templates/english/base.html
+++ b/english/templates/english/base.html
@@ -10,6 +10,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
 		<script src="{% static 'english/js/jquery-3.1.1.min.js' %}" type="text/javascript"></script>
   		<script src="{% static 'english/js/bootstrap.min.js' %}" type="text/javascript"></script>
+  		<script src="{% static 'english/js/common.js' %}" type="text/javascript"></script>
 		{% block t_block %}
   		{% endblock %}
 	</head>
@@ -17,20 +18,21 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 first firstrow">
-					<a href="{% url 'english:index' %}"><img src="{% static 'english/fonts/logo.png' %}" alt="logo"></a>
+					<a href="{%url 'english:index' %}"><img src="{% static 'english/fonts/logo.png' %}" alt="logo"></a>
 				</div>
 
-				<div class="col-lg-5 col-md-5 col-sm-5 col-xs-5 second firstrow">
+				<div class="col-lg-5 col-md-5 col-sm-6 col-xs-6 second firstrow">
 					<span class="title">Several unrelated small apps</span>
 				</div>
 
-				<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 third firstrow">
+				<div class="col-lg-4 col-md-4 col-sm-3 col-xs-3 third firstrow">
 					<nav class="menu">
-						<ul>
+						<ul class="icons">
 							<li><a href="{% url 'english:index' %}">Home</a></li>
 							<li><a href="#">About app</a></li>
 						</ul>
 					</nav>
+					<span class="glyphicon glyphicon-heart blue" aria-hidden="true"></span>
 				</div>
 			</div>
 		</div>
