--- a/english/static/english/css/english.css
+++ b/english/static/english/css/english.css
@@ -3,12 +3,13 @@ button {
   text-overflow: ellipsis;
   background-color: #032042;
   margin-bottom: 10px;
-  border: 3px solid #74ca12;
+  border: 3px solid white;
   width: 200px;
   height: 80px;
   font-size: 20px;
   border-radius: 0 15px;
-  color: #74ca12;
+  color: white;
+  font-family: 'Indie Flower', cursive;
   cursor: pointer;
 }
 
@@ -16,14 +17,16 @@ button:hover {
   background-color: #2d3033;
 }
 
-#russian {
-  position: absolute;
-  top: 200px;
-  left: 500px;
+.words {
+  position: relative;
 }
 
-#english {
+.russian {
   position: absolute;
-  top: 200px;
-  left: 800px;
+  left: 40%;
+}
+
+.english {
+  position: absolute;
+  left: 20%;
 }
