--- a/english/static/english/css/english.css
+++ b/english/static/english/css/english.css
@@ -30,3 +30,12 @@ button:hover {
   position: absolute;
   left: 20%;
 }
+
+@media (max-width: 360px) {
+  .english {
+    left: 20%;
+  }
+  .russian {
+    left: 0;
+  }
+}
