--- a/english/templates/english/fifteen.html
+++ b/english/templates/english/fifteen.html
@@ -12,24 +12,24 @@
 		<span class="seconds">00</span>
 	</div>
 	<div class="desk">
-		<div class="first com" n="1">1</div>
-		<div class="second com" n="2">2</div>
-		<div class="third com" n="3">3</div>
-		<div class="fourth com" n="4">4</div>
+		<div class="com" n="1">1</div>
+		<div class="com" n="2">2</div>
+		<div class="com" n="3">3</div>
+		<div class="com" n="4">4</div>
 		<br>
-		<div class="fifth com" n="5">5</div>
-		<div class="sixth com" n="6">6</div>
-		<div class="seventh com" n="7">7</div>
-		<div class="eighth com" n="8">8</div>
+		<div class="com" n="5">5</div>
+		<div class="com" n="6">6</div>
+		<div class="com" n="7">7</div>
+		<div class="com" n="8">8</div>
 		<br>
-		<div class="ninth com" n="9">9</div>
-		<div class="tenth com" n="10">10</div>
-		<div class="eleventh com" n="11">11</div>
-		<div class="twelfth com" n="12">12</div>
+		<div class="com" n="9">9</div>
+		<div class="com" n="10">10</div>
+		<div class="com" n="11">11</div>
+		<div class="com" n="12">12</div>
 		<br>
-		<div class="thirteenth com" n="13">13</div>
-		<div class="fourteenth com" n="14">14</div>
-		<div class="fifteenth com" n="15">15</div>
+		<div class="com" n="13">13</div>
+		<div class="com" n="14">14</div>
+		<div class="com" n="15">15</div>
 		<div class="sixteenth com" n="16"></div>
 	</div>
 	<div class="begin">Begin!</div>
